upgraded entrypoint script from
https://github.com/blacklabelops/confluence/edit/master/docker-entrypoint.sh